--- a/.github/workflows/master-workflow.yml
+++ b/.github/workflows/master-workflow.yml
@@ -23,4 +23,4 @@ jobs:
         with:
           go-version: 1.17.2
       - name: Parser test
-        run: go test pkg/parser/* -v
+        run: go test ./... -v
